--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Adam Hicks
-  description: Ansible modules for Hashicorp Vault
+  description: Ansible modules for Morpheus
   license: MIT
 
   min_ansible_version: 2.0
